--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 PyPDF2
-spacy
+spacy=3.8.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
 nltk
 sentence-transformers
 qdrant-client
+annotated-text
 openai
 rake-nltk
 jsonlib-python3
 plotly
 pdfkit
 markdown2
-st-annotated-text
